--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -10,13 +10,26 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  win:
+  #Windows:
 
-    runs-on: windows-latest
+   # runs-on: windows-latest
+
+    #steps:
+    #- uses: actions/checkout@v3
+    #- name: Install dependencies  
+    #  run: py -m pip install wheel
+    #- name: Build wheel
+    #  run: py setup.py bdist_wheel -p win-amd64
+      
+  macOS:
+
+    runs-on: macos-11
 
     steps:
     - uses: actions/checkout@v3
+    - name: Mac version
+      run: sw_vers
     - name: Install dependencies  
       run: py -m pip install wheel
     - name: Build wheel
-      run: py setup.py bdist_wheel -p win-amd64
+      run: py setup.py bdist_wheel -p macosx_11_7_x86_64
