--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -32,4 +32,9 @@ jobs:
     - name: Install dependencies  
       run: python3 -m pip install twine
     - name: Build wheel
-      run: python3 setup.py bdist_wheel -p macosx_11_7_x86_64
+      run: python3 setup.py bdist_wheel -p macosx_10_7_x86_64
+    - name: Archive production artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: macosx-wheel
+        path: dist
